fixed gap

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
   background: -o-linear-gradient(#152F4F, #090824); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#152F4F, #090824); /* For Firefox 3.6 to 15 */
   background: linear-gradient(#152F4F, #090824); /* Standard syntax */
-  height: 420px;
+  height: 416px;
   color:white;
 }
 .paddingWrapper{
@@ -57,7 +57,7 @@
 .tab{
 
   cursor: pointer;
-  border-bottom: 4px transparent solid;
+  border-bottom: 4px #101E3C solid;
   text-align: center;
   flex: 1 1 auto;
   padding-bottom: 8px;
